--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,59 @@
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+    color: #212529;
     line-height: 1.6;
-    margin: 30px;
-    width: auto;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-    background-color: #333;
+    background-color: #15dbd4;
     color: #fff;
-    padding: 20px 0;
+    text-align: center;
+    border-radius: 40px;
+}
+
+header h1 {
+    margin: 0;
+    font-family: 'Georgia', serif;
+    font-size: 2;
+}
+
+
+.menu-category h2 {
+    background-color: #4caf50;
+    padding: 10px 15px;
+    color: #fff;
+    font-size: 2;
+    border-radius: 9px;
+    margin-top: 20px;
     text-align: center;
 }
-p {
-    margin: 40px ;
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul li {
+    background-color: #fff;
+    margin-bottom: 5px;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.menu-item {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.price {
+    font-weight: normal;
+    text-align:right;
+    font-size: 10;
 }
